kubernetes/02-network-policies/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx-pod
  ingress:
  - ports:
